# godette-rust

./: Cargo.toml
migrations/2022-11-04-171408_create_chats/: up.sql
migrations/2022-11-04-172210_create_users/: up.sql
migrations/2022-11-04-173323_create_chat_tags/: down.sql  up.sql
migrations/2022-11-04-173903_create_karma/: down.sql  up.sql
migrations/2022-11-04-174746_create_warnings/: down.sql  up.sql
migrations/2022-11-04-175349_create_triggers/: down.sql  up.sql
src/: commands.rs  godette.rs  main.rs  schema.rs
src/godette/: commands.rs  dispatchers.rs  handlers.rs  models.rs  utils.rs
