[package]
name = "godette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
url = "2.3.1"
dotenv = "0.15.0"
regex = "1"
reqwest = "0.11.12"
serde = "1.0.145"
serde_json = "1.0.86"